Updated clinic Id to Order ID under Inventory table

--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -33,7 +33,7 @@
             </div>
             <div class="col">
                 <div class="form-check-inline">
-                    <label class="form-text">From date</label>
+                    <label class="form-group">From date</label>
                     <input id="datepicker1" width="160" style="margin-top:5px;" />
                     <script>
                         $('#datepicker1').datepicker({
@@ -44,7 +44,7 @@
             </div>
                 <div class="col">
                     <div class="form-check-inline">
-                        <label class="form-text">To date</label>
+                        <label class="form-group">To date</label>
                         <input id="datepicker2" width="160" style="margin-top:5px;" />
                         <script>
                             $('#datepicker2').datepicker({
@@ -83,7 +83,7 @@
     <table class="table table-striped table-bordered">
         <thead>
             <tr class="bg-dark">
-                <th>Clinic Id</th>
+                <th>Order Id</th>
                 <th>Name</th>
                 <th>Date of Order</th>
                 <th>Unit Price</th>
@@ -94,7 +94,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>001</td>
+                <td>ODR009</td>
                 <td>Test Strip</td>
                 <td>05/01/2019</td>
                 <td>$1.00</td>
@@ -105,7 +105,7 @@
         </tbody>
         <tbody>
             <tr>
-                <td>002</td>
+                <td>ODR002</td>
                 <td>Test Strip</td>
                 <td>04/22/2019</td>
                 <td>$1.00</td>
@@ -116,7 +116,7 @@
         </tbody>
         <tbody>
             <tr>
-                <td>003</td>
+                <td>ODR003</td>
                 <td>Phone</td>
                 <td>02/03/2019</td>
                 <td>$200.00</td>
