--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -22,7 +22,7 @@
     <div class="tab-content">
         <div id="home" class="container tab-pane active">
             <br>
-            <img src="~/Content/Img/compare.JPG" class="mx-auto d-block img-fluid img-thumbnail" />
+            <img src="~/Content/Img/compare.JPG" class="mx-auto d-block img-fluid img-thumbnail" style="margin-bottom:15px;"/>
         </div>
         <div id="menu1" class="container tab-pane fade">
             <div class="row" style="margin-top:20px;">
@@ -86,8 +86,8 @@
                 <thead>
                     <tr class="bg-dark">
                         <th>Comparison Attributes</th>
-                        <th>Clinic A</th>
-                        <th>Clinic B</th>
+                        <th>Lagos Clinic</th>
+                        <th>Abia Clinic</th>
                     </tr>
                 </thead>
                 <tbody>
