--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -8,40 +8,44 @@
     <p>Select your image by entering the patientID:</p>
 </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col" style="width:500px;">
+            <input type="file" class="form-control-file border">
 
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
 
-<input type="file" class="form-control-file border">
-
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-
-        <div class="carousel-item active">
-            <img class="d-block w-100 CarouselImage" src="~/Content/Img/bluebox.JPG" alt="First slide">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/bluebox.JPG" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/yellowbox.JPG" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/orangebox.JPG" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img class="d-block w-100 CarouselImage" src="~/Content/Img/yellowbox.JPG" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100 CarouselImage" src="~/Content/Img/orangebox.JPG" alt="Third slide">
+        <div class="col" style="margin-top:40px;">
+            <p class="text-warning">Phone ID: 001 </p>
+            <p class="text-warning">Time: 12:53pm</p>
+            <p class="text-warning">Date: 05/14/2019</p>
+            <p class="text-warning">Location: Clinic A, Lagos</p>
+            <p class="text-warning">Phone Brand: Huawei P30 pro</p>
+            <p class="text-warning">Phone OS: Android KitKat</p>
         </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div>
-
-<p class="text-warning">Phone ID: 001 </p>
-<p class="text-warning">Time: 12:53pm</p>
-<p class="text-warning">Date: 05/14/2019</p>
-<p class="text-warning">Location: Clinic A, Lagos</p>
-<p class="text-warning">Phone Brand: Huawei P30 pro</p>
-<p class="text-warning">Phone OS: Android KitKat</p>
-
 
 
 
