--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -10,20 +10,26 @@
 
 <div class="container">
     <div class="row">
-        <div class="col" style="width:500px;">
-            <input type="file" class="form-control-file border">
+    <div class="form-group">
+        <label for="patientId">Patinet ID: </label>
+        <input type="text" class="form-control" id="patientId" />
+     </div>
+    </div>
+    <div class="row">
 
+        <div class="col" style="width:700px;">
+          
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
 
                     <div class="carousel-item active">
-                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/bluebox.JPG" alt="First slide">
+                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/yellowbox.JPG" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/yellowbox.JPG" alt="Second slide">
+                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/orangebox.JPG" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/orangebox.JPG" alt="Third slide">
+                        <img class="d-block w-100 CarouselImage" src="~/Content/Img/bluebox.JPG" alt="Third slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
