Added Search button under Image tab

--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -10,15 +10,22 @@
 
 <div class="container">
     <div class="row">
-    <div class="form-group">
-        <label for="patientId">Patinet ID: </label>
-        <input type="text" class="form-control" id="patientId" />
-     </div>
+        <div class="col">
+            <div class="form-check-inline">
+                <label for="patientId">Patient ID: </label>
+                <input type="text" class="form-control" id="patientId" />
+            </div>
+        </div>
+        <div class="col">
+                <div class="btn btn-lg btn-block">
+                    <button type="submit">Search</button>
+                </div>
+         </div>
+        </div>
     </div>
+    
     <div class="row">
-
-        <div class="col" style="width:700px;">
-          
+        <div class="col" style="width:700px; margin-top:20px;">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
 
