--- a/LifeSaverSite/Views/Home/Image.cshtml
+++ b/LifeSaverSite/Views/Home/Image.cshtml
@@ -21,11 +21,9 @@
                     <button type="submit">Search</button>
                 </div>
          </div>
-        </div>
     </div>
-    
-    <div class="row">
-        <div class="col" style="width:700px; margin-top:20px;">
+    <div class="row" style="margin-bottom:20px;">
+        <div class="col" style="width:900px; margin-top:20px;">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
 
@@ -35,9 +33,9 @@
                     <div class="carousel-item">
                         <img class="d-block w-100 CarouselImage" src="~/Content/Img/orangebox.JPG" alt="Second slide">
                     </div>
-                    <div class="carousel-item">
+                   @* <div class="carousel-item">
                         <img class="d-block w-100 CarouselImage" src="~/Content/Img/bluebox.JPG" alt="Third slide">
-                    </div>
+                    </div>*@
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
